--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 	<meta name="msapplication-square150x150logo" content="icon/mstile-150x150.png">
 	<meta name="msapplication-square310x310logo" content="icon/mstile-310x310.png">
 	<meta name="msapplication-wide310x150logo" content="icon/mstile-310x150.png">
+
+	<link rel="stylesheet" type="text/css" href="custom-style.css" />
 </head>
 
 <body>
